--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>CV - Nicolas Giethlen</title>
-  <meta name="description" content="">
+  <meta name="description" content="Le curriculum vitæ de Nicolas Giethlen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- build:css css/main.min.css -->
