Big style refucktoring

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
             <p>Mockups, prototypes online, guides de style</p>
           </article>
           <article>
-            <h3>Intégration HTML/CSS</h3>
+            <h3>Intégration HTML et CSS</h3>
             <p>Responsive et mobile-first, accessibilité, SEO, performance web</p>
           </article>
           <article>
@@ -133,8 +133,9 @@
                 <span>Lead intégrateur</span>
                 <span>(<a href="http://webcd.fr">agence Webcd</a> à Obernai)</span>
               </h3>
-              <p>Architecture, développement et maintenance de la partie front des CMS de l'entreprise. Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets <em>(références&nbsp;: <a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>).</em></p>
-              <p>Modernisation générale du process HTML/CSS/JS (transition responsive/mobile-first, framework maison Sass/Bootstrap et starter thème WordPress). Rédaction de documentation et de chartes, formation des équipes. Délégué du personnel et évangéliste interne des bonnes pratiques et de la qualité web.</p>
+              <p>Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets <em>(cf. <a href="https://github.com/Chmood/Chmood.github.io">mon portfolio</a><!--<a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>-->).</em></p>
+              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process (responsive/mobile-first, framework maison Sass/Bootstrap et starter thème WordPress).</p>
+              <p>Rédaction de documentation interne, formation des équipes. Délégué du personnel et évangéliste des bonnes pratiques et de la qualité web.</p>
             </article>
             <article class="timeline__item">
               <h3>
