--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
                 <span>(<a href="http://webcd.fr">agence Webcd</a> à Obernai)</span>
               </h3>
               <p>Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets <em>(cf. <a href="https://github.com/Chmood/Chmood.github.io">mon portfolio</a><!--<a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>-->).</em></p>
-              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process (responsive/mobile-first, framework maison Sass/Bootstrap et starter thème WordPress).</p>
+              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process (responsive/mobile-first, framework Sass/Bootstrap et starter thème WordPress maison).</p>
               <p>Rédaction de documentation interne, formation des équipes. Délégué du personnel et évangéliste des bonnes pratiques et de la qualité web.</p>
             </article>
             <article class="timeline__item">
