Improved so many things

--- a/src/index.html
+++ b/src/index.html
@@ -94,11 +94,11 @@
   			<div class="section__body">
           <article>
             <h3>Conception UI/UX</h3>
-            <p>Mockups, prototypes online, guides de style</p>
+            <p>Design d'interfaces, prototypage, guides de style</p>
           </article>
           <article>
-            <h3>Intégration HTML et CSS</h3>
-            <p>Responsive et mobile-first, accessibilité, SEO, performance web</p>
+            <h3>Intégration</h3>
+            <p>Responsive, mobile-first, accessibilité, SEO, performance</p>
           </article>
           <article>
             <h3>Développement JS</h3>
@@ -134,7 +134,7 @@
                 <span>(<a href="http://webcd.fr">agence Webcd</a> à Obernai)</span>
               </h3>
               <p>Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets <em>(cf. <a href="https://github.com/Chmood/Chmood.github.io">mon portfolio</a><!--<a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>-->).</em></p>
-              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process (responsive/mobile-first, framework Sass/Bootstrap et starter thème WordPress maison).</p>
+              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process et des outils (framework Sass/Bootstrap et starter thème WordPress maison).</p>
               <p>Rédaction de documentation interne, formation des équipes. Délégué du personnel et évangéliste des bonnes pratiques et de la qualité web.</p>
             </article>
             <article class="timeline__item">
