--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
           </article>
           <article>
             <h3>Intégration</h3>
-            <p>Responsive, mobile-first, accessibilité, SEO, performance</p>
+            <p>Responsive & mobile-first, accessibilité, SEO, performance</p>
           </article>
           <article>
             <h3>Développement JS</h3>
@@ -131,7 +131,7 @@
               <h3>
                 <date class="date-range">2014 - 2017</date>
                 <span>Lead intégrateur</span>
-                <span>(<a href="http://webcd.fr">agence Webcd</a> à Obernai)</span>
+                <span>(<a href="http://webcd.fr">agence Webcd</a> à&nbsp;Obernai)</span>
               </h3>
               <p>Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets <em>(cf. <a href="https://github.com/Chmood/Chmood.github.io">mon portfolio</a><!--<a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>-->).</em></p>
               <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process et des outils (framework Sass/Bootstrap et starter thème WordPress maison).</p>
