Section titles got love, especially user social one

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,10 @@
         </article>
       </section>
 
-      <section class="user__metas section">
+      <section class="user__social section">
 
-        <!-- <h3>Social</h3> -->
+        <!-- <h2 class="section__title">Social</h2> -->
+
 				<article class="user__socials socials">
 					<a class="social social--twitter" href="https://twitter.com/nicolasgiethlen">
             <svg class="social__icon social__icon--twitter">
@@ -68,8 +69,11 @@
             <span>github.com/chmood</span>
           </a>
 				</article>
+      </section>
 
-        <h3>Contact</h3>
+      <section class="user__contact section">
+        <!-- <h2 class="section__title">Contact</h2> -->
+        <h2 class="section__title--simple">Contact</h2>
 				<article class="contact">
           <span class="contact__mail"><a href="mailto:giethlen.nicolas@gmail.com">giethlen.nicolas@gmail.com</a></span>
 					<span class="contact__phone"><a href="tel:033624922679">06&#8239;24&#8239;92&#8239;26&#8239;79</a></span>
@@ -191,7 +195,7 @@
 
   	<footer class="cv__foot">
       <article class="copyright">
-        Version web de ce CV : <a href="https://chmood.github.io/">https://chmood.github.io</a> ©&nbsp;<script> document.write(new Date().getFullYear()); </script>
+        Version web de ce CV : <a href="https://chmood.github.io/">https://chmood.github.io</a> ©&nbsp;Nicolas&nbsp;Giethlen&nbsp;<script> document.write(new Date().getFullYear()); </script>
       </article>
   	</footer>
   </div>
