sm & md breakpoints in action + UI components

--- a/src/index.html
+++ b/src/index.html
@@ -39,53 +39,59 @@
         <article class="user__status status">
 					<span class="status__age">
             <script> document.write( parseInt(new Date().getFullYear()) - 1978 ); </script>
-            &nbsp;ans</span> //
-					<span class="status__city">Strasbourg</span>
-					<span class="status__job">En&nbsp;poste</span>
+            &nbsp;ans</span>
+					<span class="status__city">//&nbsp;Strasbourg</span>
+					<span class="status__job">//&nbsp;En&nbsp;poste</span>
         </article>
       </section>
 
-      <section class="user__social section">
+      <div class="user__metas">
 
-        <!-- <h2 class="section__title">Social</h2> -->
+        <section class="user__social section">
+          <!-- <h2 class="section__title">Social</h2> -->
+          <h2 class="section__title--simple">Social</h2>
 
-				<article class="user__socials socials">
-					<a class="social social--twitter" href="https://twitter.com/nicolasgiethlen">
-            <svg class="social__icon social__icon--twitter">
-              <use xlink:href="#logo-twitter"/>
-            </svg>
-            <span>@nicolasgiethlen</span>
-          </a>
-					<a class="social social--codepen" href="http://codepen.io/Chmood/">
-            <svg class="social__icon social__icon--codepen">
-              <use xlink:href="#logo-codepen"/>
-            </svg>
-            <span>codepen.io/chmood</span>
-          </a>
-					<a class="social social--github" href="https://github.com/Chmood">
-            <svg class="social__icon social__icon--github">
-              <use xlink:href="#logo-github"/>
-            </svg>
-            <span>github.com/chmood</span>
-          </a>
-				</article>
-      </section>
+          <article class="user__socials socials">
+            <a class="social social--twitter" href="https://twitter.com/nicolasgiethlen">
+              <svg class="social__icon social__icon--twitter">
+                <use xlink:href="#logo-twitter"/>
+              </svg>
+              <span>@nicolasgiethlen</span>
+            </a>
+            <a class="social social--codepen" href="http://codepen.io/Chmood/">
+              <svg class="social__icon social__icon--codepen">
+                <use xlink:href="#logo-codepen"/>
+              </svg>
+              <span>codepen.io/chmood</span>
+            </a>
+            <a class="social social--github" href="https://github.com/Chmood">
+              <svg class="social__icon social__icon--github">
+                <use xlink:href="#logo-github"/>
+              </svg>
+              <span>github.com/chmood</span>
+            </a>
+          </article>
+        </section>
 
-      <section class="user__contact section">
-        <!-- <h2 class="section__title">Contact</h2> -->
-        <h2 class="section__title--simple">Contact</h2>
-				<article class="contact">
-          <span class="contact__mail"><a href="mailto:giethlen.nicolas@gmail.com">giethlen.nicolas@gmail.com</a></span>
-					<span class="contact__phone"><a href="tel:033624922679">06&#8239;24&#8239;92&#8239;26&#8239;79</a></span>
-          <div class="contact__adress adress">
-            <span class="adress__number">5</span>
-            <span class="adress__street">rue de Kaysersberg</span><br>
-            <span class="adress__zipcode">67100</span>
-            <span class="adress__city">Strasbourg</span><br>
-            <span class="adress__country">France</span>
-          </div>
-				</article>
-  		</section>
+        <section class="user__contact section">
+          <!-- <h2 class="section__title">Contact</h2> -->
+          <h2 class="section__title--simple">Contact</h2>
+
+          <article class="contact">
+            <span class="contact__mail"><a href="mailto:giethlen.nicolas@gmail.com">giethlen.nicolas@gmail.com</a></span>
+            <span class="contact__phone"><a href="tel:033624922679">06&#8239;24&#8239;92&#8239;26&#8239;79</a></span>
+            <div class="contact__adress adress">
+              <span class="adress__number">5</span>
+              <span class="adress__street">rue de Kaysersberg</span><br>
+              <span class="adress__zipcode">67100</span>
+              <span class="adress__city">Strasbourg</span><br>
+              <span class="adress__country">France</span>
+            </div>
+          </article>
+        </section>
+
+      </div>
+
   	</header>
 
   	<main class="cv__main">
