Updated portfolio links

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -184,7 +184,7 @@
     			<div class="section__body">
             <p><em>Les applis web que j'ai développées</em></p>
             <ul>
-              <li>LoL Item Set Builder (<a href="http://codepen.io/Chmood/full/ygQKLO/">prototype Codepen</a>) <span class="pill">bientôt</span></li>
+              <li><a href="https://www.lol-item-sets-builder.com/">LoL Item Set Builder</a>, aide au jeu League of Legends <span class="pill">perso</span></li>
               <li>Dashboard pour les coachs Plus que PRO (<a href="http://codepen.io/Chmood/full/NdXzNM/">prototype Codepen</a>) <span class="pill">privé</span></li>
               <li>Dashboard de résultats de sondage interne (<a href="http://codepen.io/Chmood/full/RWQgrp/">prototype Codepen</a>) <span class="pill">privé</span></li>
               <li>Appli mobile des commerciaux Plus que PRO (avec Appccelerator) <span class="pill">privé</span></li>
