--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,37 +12,38 @@
   <link rel="stylesheet" href=".tmp/css/main.css">
   <!-- /build -->
 </head>
+
 <body>
 
   <div class="cv">
 
-  	<header class="cv__head">
-  		<!-- <div class="doc-meta print-only">Curriculum vitæ <a href="http://codepen.io/Chmood/pen/ojaqZq/?editors=110">(voir sur Codepen)</a></div> -->
+    <header class="cv__head">
+      <!-- <div class="doc-meta print-only">Curriculum vitæ <a href="http://codepen.io/Chmood/pen/ojaqZq/?editors=110">(voir sur Codepen)</a></div> -->
 
-  		<section class="user-media">
+      <section class="user-media">
         <article class="user__media user__media--hero">
           <div class="media">
             <div class="media__wrapper">
-              <img class="media__image" src="img/nicolas-giethlen.jpg" alt="Nicolas Giethlen" />
+              <img class="media__image" src="img/nico2.jpg" alt="Nicolas Giethlen" />
             </div>
           </div>
         </article>
       </section>
 
       <section class="user-title section ">
-				<h1 class="user__name name">
+        <h1 class="user__name name">
           <span class="name__first-name">Nicolas</span>
           <span class="name__last-name">Giethlen</span>
         </h1>
 
-				<h2 class="user__job">Développeur web front-end</h2>
+        <h2 class="user__job">Développeur web front-end</h2>
 
         <article class="user__status status">
-					<span class="status__age">
-            <script> document.write( parseInt(new Date().getFullYear()) - 1978 ); </script>
-            &nbsp;ans</span>
-					<span class="status__city">//&nbsp;Strasbourg</span>
-					<span class="status__job">//&nbsp;En&nbsp;poste</span>
+          <span class="status__age">
+            <script> document.write(parseInt(new Date().getFullYear()) - 1978); </script> &nbsp;ans
+          </span>
+          <span class="status__city">//&nbsp;Strasbourg</span>
+          <span class="status__job">//&nbsp;En&nbsp;poste</span>
         </article>
       </section>
 
@@ -54,19 +56,19 @@
           <article class="user__socials socials">
             <a class="social social--twitter" href="https://twitter.com/nicolasgiethlen">
               <svg class="social__icon social__icon--twitter">
-                <use xlink:href="#logo-twitter"/>
+                <use xlink:href="#logo-twitter" />
               </svg>
               <span>@nicolasgiethlen</span>
             </a>
             <a class="social social--codepen" href="http://codepen.io/Chmood/">
               <svg class="social__icon social__icon--codepen">
-                <use xlink:href="#logo-codepen"/>
+                <use xlink:href="#logo-codepen" />
               </svg>
               <span>codepen.io/chmood</span>
             </a>
             <a class="social social--github" href="https://github.com/Chmood">
               <svg class="social__icon social__icon--github">
-                <use xlink:href="#logo-github"/>
+                <use xlink:href="#logo-github" />
               </svg>
               <span>github.com/chmood</span>
             </a>
@@ -78,13 +80,19 @@
           <h2 class="section__title--simple">Contact</h2>
 
           <article class="contact">
-            <span class="contact__mail"><a href="mailto:giethlen.nicolas@gmail.com">giethlen.nicolas@gmail.com</a></span>
-            <span class="contact__phone"><a href="tel:033624922679">06&#8239;24&#8239;92&#8239;26&#8239;79</a></span>
+            <span class="contact__mail">
+              <a href="mailto:giethlen.nicolas@gmail.com">giethlen.nicolas@gmail.com</a>
+            </span>
+            <span class="contact__phone">
+              <a href="tel:033624922679">06&#8239;24&#8239;92&#8239;26&#8239;79</a>
+            </span>
             <div class="contact__adress adress">
               <span class="adress__number">5</span>
-              <span class="adress__street">rue de Kaysersberg</span><br>
+              <span class="adress__street">rue de Kaysersberg</span>
+              <br>
               <span class="adress__zipcode">67100</span>
-              <span class="adress__city">Strasbourg</span><br>
+              <span class="adress__city">Strasbourg</span>
+              <br>
               <span class="adress__country">France</span>
             </div>
           </article>
@@ -92,16 +100,16 @@
 
       </div>
 
-  	</header>
+    </header>
 
-  	<main class="cv__main">
+    <main class="cv__main">
       <!-- <section class="section section--cv-label">
         <div class="document-label">Curriculum vitæ</div>
   		</section> -->
 
       <section class="section section--tasks">
-			  <!-- <h2 class="section__title">Outils</h2> -->
-  			<div class="section__body">
+        <!-- <h2 class="section__title">Outils</h2> -->
+        <div class="section__body">
           <article>
             <h3>Conception UI/UX</h3>
             <p>Design d'interfaces, prototypage, guides de style</p>
@@ -114,38 +122,59 @@
             <h3>Développement JS</h3>
             <p>Applications web progressives, mobile et desktop</p>
           </article>
-  			</div>
-  			<div class="section__foot"></div>
-  		</section>
+        </div>
+        <div class="section__foot"></div>
+      </section>
 
       <section class="section section--tools">
-			  <h2 class="section__title">Outils</h2>
-  			<div class="section__body">
+        <h2 class="section__title">Outils</h2>
+        <div class="section__body">
           <article>
             <h3>Technos</h3>
-            <p><strong>CSS3/Sass</strong> (méthode BEM), <strong>Bootstrap</strong>, Flexbox, SVG. Theming <strong>Wordpress</strong> (et Drupal / Prestashop), templates <strong>PHP</strong>/Smarty/Twig. <strong>jQuery</strong>, <strong>ES6</strong>, <strong>Vue JS</strong>, Cordova, ElectronJS, Canvas, WebGL, WebAudio et d'autres API's <strong>HTML5</strong>.</p>
+            <p>
+              <strong>CSS3/Sass</strong> (méthode BEM),
+              <strong>Bootstrap</strong>, Flexbox, SVG. Theming
+              <strong>Wordpress</strong> (et Drupal / Prestashop), templates
+              <strong>PHP</strong>/Smarty/Twig.
+              <strong>jQuery</strong>,
+              <strong>ES6</strong>,
+              <strong>Vue JS</strong>, Cordova, ElectronJS, Canvas, WebGL, WebAudio et d'autres API's
+              <strong>HTML5</strong>.</p>
           </article>
           <article>
             <h3>Workflow</h3>
-            <p>Automatisation <strong>Gulp </strong>(Browsersync, PostCSS, Webpack/Babel), <strong>Node</strong> et NPM/Yarn, versioning <strong>Git</strong>, Redmine, <strong>méthodes agile</strong> (Scrum/Kanban), administration système et workstation <strong>Linux</strong>. <strong>Télé-travail</strong> occasionnel.</p>
+            <p>Automatisation
+              <strong>Gulp </strong>(Browsersync, PostCSS, Webpack/Babel),
+              <strong>Node</strong> et NPM/Yarn, versioning
+              <strong>Git</strong>, Redmine,
+              <strong>méthodes agile</strong> (Scrum/Kanban), administration système et workstation
+              <strong>Linux</strong>.
+              <strong>Télé-travail</strong> occasionnel.</p>
           </article>
-  			</div>
-  			<div class="section__foot"></div>
-  		</section>
+        </div>
+        <div class="section__foot"></div>
+      </section>
 
-  		<section class="section section--timeline">
-  			<h2 class="section__title">Expérience</h2>
-  			<div class="section__body">
+      <section class="section section--timeline">
+        <h2 class="section__title">Expérience</h2>
+        <div class="section__body">
           <div class="timeline">
             <article class="timeline__item">
               <h3>
                 <date class="date-range">2014 - 2017</date>
                 <span>Lead intégrateur</span>
-                <span>(<a href="http://webcd.fr">agence Webcd</a> à&nbsp;Obernai)</span>
+                <span>(
+                  <a href="http://webcd.fr">agence Webcd</a> à&nbsp;Obernai)</span>
               </h3>
-              <p>Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets <em>(visibles sur <a href="https://chmood.github.io/portfolio.html">mon portfolio</a><!--<a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>-->).</em></p>
-              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process et des outils (framework Sass/Bootstrap et starter thème WordPress maison).</p>
-              <p>Rédaction de documentation interne, formation des équipes. Délégué du personnel et évangéliste des bonnes pratiques et de la qualité web.</p>
+              <p>Conception, intégration et contribution à de nombreux sites web, e-commerces, applications web et extranets
+                <em>(visibles sur
+                  <a href="/portfolio.html">mon portfolio</a>
+                  <!--<a href="http://www.plus-que-pro.fr/adherents/">1000 mini-sites plus-que-pro.fr</a> et la plupart des <a href="https://www.webcd.fr/tous-les-projets/">réalisations @webcd</a>-->).</em>
+              </p>
+              <p>Architecture, développement et maintenance de la partie front de nos CMS. Modernisation des process et des
+                outils (framework Sass/Bootstrap et starter thème WordPress maison).</p>
+              <p>Rédaction de documentation interne, formation des équipes. Délégué du personnel et évangéliste des bonnes pratiques
+                et de la qualité web.</p>
             </article>
             <article class="timeline__item">
               <h3>
@@ -161,22 +190,24 @@
                 <span>BTS gestion des ressources informatiques</span>
                 <span>(TSGRI)</span>
               </h3>
-              <p>Diplôme d'état de niveau III (Bac+2) <em>AFPA de Strasbourg</em></p>
+              <p>Diplôme d'état de niveau III (Bac+2)
+                <em>AFPA de Strasbourg</em>
+              </p>
             </article>
             <svg class="timeline__icon timeline__icon--top">
-              <use xlink:href="#timeline-top"/>
+              <use xlink:href="#timeline-top" />
             </svg>
             <svg class="timeline__icon timeline__icon--bottom">
-              <use xlink:href="#timeline-bottom"/>
+              <use xlink:href="#timeline-bottom" />
             </svg>
           </div>
-  			</div>
-  			<div class="section__foot"></div>
-  		</section>
+        </div>
+        <div class="section__foot"></div>
+      </section>
 
-  		<section class="section section--profile">
-  			<h2 class="section__title">Profil</h2>
-  			<div class="section__body grid grid--50">
+      <section class="section section--profile">
+        <h2 class="section__title">Profil</h2>
+        <div class="section__body grid grid--50">
           <article>
             <h3>Geek</h3>
             <p>Passionné depuis l'âge de 11 ans. Apprentissage perpétuel, veille technique active et constante.</p>
@@ -193,17 +224,19 @@
             <h3>Hobbies</h3>
             <p>Ma gratte 🎸, la VR 😎, les romans de SF 👽, localhost:8080 🖥, mes amis et ma famille ❤️.</p>
           </article>
-  			</div>
-  			<!-- <div class="section__foot"></div> -->
-  		</section>
+        </div>
+        <!-- <div class="section__foot"></div> -->
+      </section>
 
-  	</main>
+    </main>
 
-  	<footer class="cv__foot">
+    <footer class="cv__foot">
       <article class="copyright">
-        Version web de ce CV : <a href="https://chmood.github.io/">https://chmood.github.io</a> ©&nbsp;Nicolas&nbsp;Giethlen&nbsp;<script> document.write(new Date().getFullYear()); </script>
+        Version web de ce CV :
+        <a href="https://chmood.github.io/">https://chmood.github.io</a> ©&nbsp;Nicolas&nbsp;Giethlen&nbsp;
+        <script> document.write(new Date().getFullYear()); </script>
       </article>
-  	</footer>
+    </footer>
   </div>
 
   <!-- end of content -->
@@ -221,4 +254,5 @@
     document.getElementById("svg-sprites").innerHTML += ajax.responseText;
   </script>
 </body>
+
 </html>
